Fixed #5: Node names not wrapping on refresh

--- a/metl-ui/src/main/resources/org/jumpmind/metl/ui/diagram/diagram.css
+++ b/metl-ui/src/main/resources/org/jumpmind/metl/ui/diagram/diagram.css
@@ -29,6 +29,7 @@
 
 .diagram-node-label {
     word-wrap: break-word;
+    white-space: normal;
     text-align:center;
     width: 110px;
     margin-left: -15px;
